[package]
name = "toda"
version = "0.2.3"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nix = {version = "0.29.0", features = ["dir", "fs", "mman", "mount", "process", "ptrace", "signal", "uio", "user"]}
anyhow = "1.0"
fuser = {version = "0.6", features = ["abi-7-19"]}
time = "0.1"
libc = "0.2"
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.6.10"
thiserror = "1.0"
futures = "0.3"
derive_more = "0.99.9"
glob = "0.3"
bitflags = "1.2"
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
slab = "0.4"
once_cell = "1.4"
dynasmrt = "2.0.0"
procfs = "0.15.1"
itertools = "0.9.0"
env_logger = "0.8"
retry = "1.2.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
jsonrpc-stdio-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
log = "0.4.13"

[profile.release]
debug = true
